Versjons-rydding - Rydde vekk javax og bruke egne genererte tjenestekontrakt klasser